Bug 49771: Prevent zooming on iOS
Giving a font size of at least 16px seems to stop
zooming in iOS

https://github.com/twitter/bootstrap/issues/2159

--- a/less/common/mf-common.less
+++ b/less/common/mf-common.less
@@ -23,6 +23,12 @@ textarea {
 	padding: 5px 0 5px 5px;
 }
 
+
+input,
+textarea {
+	font-size: round( 1em / @fontScalingFactor, 2 ); // Fixed font on purpose to avoid zooming on iOS
+}
+
 input:not([type=submit]), textarea {
 	background: #fff;
 	border: 1px solid #ccc;
